@@ -1,3 +1,7 @@
+1.next
+---
+* Fixed messages in additional-methods.js for maxWords, minWords, and rangeWords to include call to $.format 
+
 1.5.1
 ---
 * Updated marketo demo to use invalidHandler option instead of binding invalid-form event
